# ucf-cap-6318-book

./: .gitignore  Makefile  Manifest.toml  Project.toml  README.md  _quarto.yml  ai-lectures-plan.md  gradient_descent.py  myst.yml  project-1.md  project1.html  pydantic-ai-guide.md  pydantic-ai-llms.txt  pyproject.toml  syllabus_2025.md  writing-style.md
.claude/: settings.local.json
docs/: CNAME  config.json  index.html  index.json  l-a02-03-evaluations.json  l-a03-01-mcp-with-fastmcp.json  l-a03-02-ai-agent-security.json  l-a1-01-from-rule-based-to-learning-agents.json  l-a1-02-rag-pattern-augmented-knowledge.json  l-a1-03-multi-agent-conversations.json  l-a2-01-function-calling-and-tools.json  l-a2-02-type-safe-agents-pydantic-patterns.json  l01-01-welcome.json  l01-02-setup.html  l01-02-setup.json  l01-03-julia-basics.html  l01-03-julia-basics.json  l02-01-julia-types-methods.html  l02-01-julia-types-methods.json  l02-02-code-organization.json  l02-03-julia-packages.json  l03-01-graphs.html  l03-01-graphs.json  l03-02-strong-weak-ties.html  l03-02-strong-weak-ties.json  l04-01-homophily.html  l04-01-homophily.json  l04-02-weighted-graphs.html  l04-02-weighted-graphs.json  l04-03-structural-balance.html  l04-03-structural-balance.json  l05-01-production-networks.html  l05-01-production-networks.json  l06-01-abm-concepts.html  l06-01-abm-concepts.json  l06-01-game-theory-intro.html  l06-01-game-theory-intro.json  l06-02-julia-skills.html  l06-02-julia-skills.json  (+58 more)
weekA02/: L.A02.03_evaluations.ipynb  L.A2.01_function_calling_and_tools.ipynb  pyproject.toml
(+86 files in other folders)
