[project]
name = "weeka02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.10.0",
    "crewai[tools]>=1.4.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "logfire>=4.14.2",
    "nest-asyncio>=1.6.0",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "pydantic-ai[evals]>=1.12.0",
    "pydantic-evals[logfire]>=1.12.0",
    "python-dotenv>=1.2.1",
]
